# Project-management-app

./: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd_task.yml  ci_task.yml  tests_pytest.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/services/: s3_service.py
app/tests/: test_main.py
terraform/: main.tf
tests/: conftest.py  test_main.py
